fix: format dates add: blog list animation fix: layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,6 +132,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 .hljs {
